--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,24 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "app.py",
-      "use": "@vercel/python",
-      "config": { "runtime": "python3.9" }
+
+  // ↓ これまでの "builds" は丸ごと削除 ↓
+
+  // "builds": [
+  //   {
+  //     "src": "app.py",
+  //     "use": "@vercel/python",
+  //     "config": { "runtime": "python3.9" }
+  //   }
+  // ],
+
+  // ↓ 代わりに functions セクションだけ残します ↓
+  "functions": {
+    "app.py": {
+      "runtime": "python3.9"
     }
-  ],
+  },
+
+  // ルーティングはそのままでOK
   "routes": [
     { "src": "/line_webhook", "dest": "app.py" },
     { "src": "/(.*)",        "dest": "app.py" }
