--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,18 @@
 {
   "version": 2,
-
-  // ↓ これまでの "builds" は丸ごと削除 ↓
-
-  // "builds": [
-  //   {
-  //     "src": "app.py",
-  //     "use": "@vercel/python",
-  //     "config": { "runtime": "python3.9" }
-  //   }
-  // ],
-
-  // ↓ 代わりに functions セクションだけ残します ↓
   "functions": {
     "app.py": {
       "runtime": "python3.9"
     }
   },
-
-  // ルーティングはそのままでOK
   "routes": [
-    { "src": "/line_webhook", "dest": "app.py" },
-    { "src": "/(.*)",        "dest": "app.py" }
+    {
+      "src": "/line_webhook",
+      "dest": "app.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "app.py"
+    }
   ]
 }
