--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-# requirements.txt
-flask==3.0.2           # サーバー
-line-bot-sdk==3.8.0    # LINE Messaging API
-google-generativeai==0.7.1   # 画像対応版（tested）
-
+flask==3.0.2
+line-bot-sdk==3.8.0
+google-generativeai==0.7.1
+requests==2.31.0
