--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,17 @@
 {
   "version": 2,
-  "functions": {
-    "app.py": {
-      "runtime": "python3.9"
+- "functions": {
+-   "app.py": { "runtime": "python3.9" }
+- },
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python",
+      "config": { "runtime": "python3.9" }
     }
-  },
+  ],
   "routes": [
-    {
-      "src": "/line_webhook",
-      "dest": "app.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "app.py"
-    }
+    { "src": "/line_webhook", "dest": "app.py" },
+    { "src": "/(.*)",        "dest": "app.py" }
   ]
 }
