--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
+
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "app.py",
-      "use": "@vercel/python",
-      "config": { "runtime": "python3.9" }
+  "functions": {
+    "app.py": {
+      "runtime": "@vercel/python@0.5.0"
     }
-  ],
+  },
   "routes": [
     { "src": "/line_webhook", "dest": "app.py" },
     { "src": "/(.*)",        "dest": "app.py" }
