--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
-
 {
   "version": 2,
-  "functions": {
-    "app.py": {
-      "runtime": "@vercel/python@0.5.0"
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python@0.5.0"
     }
-  },
+  ],
   "routes": [
     { "src": "/line_webhook", "dest": "app.py" },
     { "src": "/(.*)",        "dest": "app.py" }
