--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ flask==3.0.2
 line-bot-sdk==3.8.0
 google-generativeai==0.7.1
 requests==2.31.0
-google-cloud-aiplatform>=1.5.0  # ← この行が必ずあることを確認！
+google-auth==2.29.0
