--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ google-generativeai==0.7.1
 requests==2.31.0
 google-auth==2.29.0
 redis==5.0.4
-pinecone-client==4.1.1  # ★ この行を追加
+pinecone-client==4.1.1
+PyMuPDF==1.24.1  # ★ この行を追加
